# dsrp-machine-learning-engineering-4

./: .gitignore  LICENSE  README.md
.github/workflows/: frontend-docker.yml
app/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.base.json
app/frontend/src/: App.tsx  api.ts  index.css  types.ts
iac/: README.md  Taskfile.yml  aks.tf  backend.hcl  log_analytics.tf  network.tf  outputs.tf  provider.tf  variables.tf
k8s/: DESPLIEGUE_APPS.md  frontend.yaml
notebooks/: data_collection.ipynb  feature_engineering.ipynb  modeling.ipynb  omdb_raw.json  pyproject.toml  serving.ipynb
notebooks/data/: movie_ids.txt  movies_base.parquet  processed_ids.txt
