[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "dagshub>=0.6.4",
    "fastembed>=0.7.4",
    "flytekit>=1.16.11",
    "hyperopt>=0.2.7",
    "jupyterlab>=4.5.0",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "mlflow>=3.7.0",
    "orjson>=3.11.4",
    "polars>=1.35.2",
    "python-dotenv>=1.2.1",
    "qdrant-client[fastembed]>=1.16.1",
    "sentence-transformers>=5.1.2",
]
